[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls"] }
futures-util = "0.3"
clap = { version = "4.5.51", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
