[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls"] }
futures-util = "0.3"
clap = { version = "4.5.51", features = ["derive"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1.0.100"
serde_json = "1.0.145"
signet = { path = "../signet" }
x509-parser = "0.18.0"
ring = "0.17.14"
pem = "3.0.6"
rustls = "0.23.35"
webpki = "0.22.4"
